# pwrate

./: .gitattributes  Cargo.toml  PKGBUILD  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs  pw.rs
