[package]
name = "pwrate"
version = "1.6.0"
authors = ["Alex B <pkunk.ab@gmail.com>"]
edition = "2021"
rust-version = "1.70.0"
license = "GPL-3.0-only"
keywords = ["pipewire", "gtk", "gui", "utility"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
glib = { version = "0.18.1" }
gtk = { version = "0.7.1", package = "gtk4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
